DevOps-Infra/kubernetes-manifests/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: d4-sample
  labels:
    app.kubernetes.io/part-of: d4-sample
    name: d4-sample
